@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-14T01:19:17Z",
+  "timestamp" : "2022-11-14T08:20:56Z",
   "count_outdated" : 658,
   "uniques_outdated" : 374,
   "count" : 676,
-  "uniques" : 382,
+  "uniques" : 383,
   "clones" : [
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -51,6 +51,13 @@
       "timestamp": "2022-11-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
