@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -35,6 +35,11 @@
     {
       "timestamp": "2022-11-13T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-14T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
